Some curriculum data and scraping complete, ready for trial

--- a/curriculum_content/scraping_config.json
+++ b/curriculum_content/scraping_config.json
@@ -1,4 +1,4 @@
 {
 "driver_path": "/Users/dcs0spb/Downloads/chromedriver_mac_arm64/chromedriver",
-"institutions": ["Durham_UK", "Glasgow_UK"]
+"institutions": ["Durham_England", "Glasgow_Scotland", "Kennesaw_USA", "UOC_Spain", "Uppsala_Sweden", "VirginiaTech_USA"]
 }
