update Makefile to work with predefined elective lists

--- a/curriculum_content/Makefile
+++ b/curriculum_content/Makefile
@@ -4,11 +4,15 @@ inst_pre := CAUKiel_Germany Kennesaw_USA UofT_Canada UOC_Spain VirginiaTech_USA
 inst_todo := SDSU_USA
 inst_all := $(inst_scrape) $(inst_pre) $(inst_todo)
 
-scrape_csvs := $(foreach inst,$(inst_scrape),$(inst)/electives_scraped.csv)
-pre_csvs := $(foreach inst,$(inst_pre),$(inst)/electives_pre.csv)
+scraped_file := electives_scraped.csv
+scrape_csvs := $(foreach inst,$(inst_scrape),$(inst)/$(scraped_file))
+
+pre_file := electives_pre.csv
+pre_in_file := electives_in.csv
+pre_csvs := $(foreach inst,$(inst_pre),$(inst)/$(pre_file))
 
 python_scrape := scraping.py
-
+python_wrangle := pre_wrangling.py
 
 all: inst_scrape inst_pre
 
@@ -16,26 +20,33 @@ inst_scrape: $(inst_scrape)
 inst_pre: $(inst_pre)
 
 
-Durham_England: Durham_England/electives_scraped.csv
-Glasgow_Scotland: Glasgow_Scotland/electives_scraped.csv 
-Edinburgh_Scotland: Edinburgh_Scotland/electives_scraped.csv 
-Uppsala_Sweden: Uppsala_Sweden/electives_scraped.csv 
+Durham_England: Durham_England/$(scraped_file)
+Glasgow_Scotland: Glasgow_Scotland/$(scraped_file)
+Edinburgh_Scotland: Edinburgh_Scotland/$(scraped_file)
+Uppsala_Sweden: Uppsala_Sweden/$(scraped_file) 
 
-Durham_England/electives_scraped.csv: Durham_England/institution.json $(python_scrape)
+Durham_England/$(scraped_file): Durham_England/institution.json $(python_scrape)
 	python3 $(python_scrape) $(@D)
 
-Glasgow_Scotland/electives_scraped.csv: Glasgow_Scotland/institution.json $(python_scrape)
+Glasgow_Scotland/$(scraped_file): Glasgow_Scotland/institution.json $(python_scrape)
 	python3 $(python_scrape) $(@D)
 
-Edinburgh_Scotland/electives_scraped.csv: Edinburgh_Scotland/institution.json $(python_scrape)
+Edinburgh_Scotland/$(scraped_file): Edinburgh_Scotland/institution.json $(python_scrape)
 	python3 $(python_scrape) $(@D)
 
-Uppsala_Sweden/electives_scraped.csv: Uppsala_Sweden/institution.json $(python_scrape)
+Uppsala_Sweden/$(scraped_file): Uppsala_Sweden/institution.json $(python_scrape)
 	python3 $(python_scrape) $(@D)
 
-#$(scrape_csvs): $@/institution.json $(python_scrape)
-#	python3 $(python_scrape) $(@D)
+CAUKiel_Germany: CAUKiel_Germany/$(pre_file)
+Kennesaw_USA: Kennesaw_USA/$(pre_file)
+VirginiaTech_USA: VirginiaTech_USA/$(pre_file)
 
-$(pre_csvs): $(@D)/institution.json scraping.py
 
+CAUKiel_Germany/$(pre_file): CAUKiel_Germany/institution.json CAUKiel_Germany/$(pre_in_file) $(python_wrangle)
+	python3 $(python_wrangle) $(@D)
 
+Kennesaw_USA/$(pre_file): Kennesaw_USA/institution.json Kennesaw_USA/$(pre_in_file) $(python_wrangle)
+	python3 $(python_wrangle) $(@D)
+
+VirginiaTech_USA/$(pre_file): VirginiaTech_USA/institution.json VirginiaTech_USA/$(pre_in_file) $(python_wrangle)
+	python3 $(python_wrangle) $(@D)
