--- a/curriculum_content/scraping_config.json
+++ b/curriculum_content/scraping_config.json
@@ -1,4 +1,3 @@
 {
-"driver_path": "/Users/dcs0spb/Downloads/chromedriver_mac_arm64/chromedriver",
-"institutions": ["Durham_England", "Glasgow_Scotland", "Kennesaw_USA", "UOC_Spain", "Uppsala_Sweden", "VirginiaTech_USA"]
+    "driver_path": "/Users/dcs0spb/Downloads/chromedriver_mac_arm64/chromedriver"
 }
