--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,38 @@
+aiohttp==3.8.5
+aiosignal==1.3.1
+appdirs==1.4.4
+async-timeout==4.0.3
+attrs==23.1.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
+clikit==0.6.2
+crashtest==0.3.1
+exceptiongroup==1.1.3
+frozenlist==1.4.0
+h11==0.14.0
+httpstan==4.10.1
+idna==3.4
+marshmallow==3.20.1
+multidict==6.0.4
 numpy==1.25.2
+outcome==1.2.0
+packaging==23.1
 pandas==2.0.3
+pastel==0.2.1
+pylev==1.4.0
+pysimdjson==5.0.2
+PySocks==1.7.1
+pystan==3.7.0
 python-dateutil==2.8.2
 pytz==2023.3
+selenium==4.11.2
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+trio==0.22.2
+trio-websocket==0.10.3
 tzdata==2023.3
+urllib3==2.0.4
+webargs==8.3.0
+wsproto==1.2.0
+yarl==1.9.2
